--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -212,7 +212,7 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-success btn-block">New Subject
+              <button class="btn btn-inverse btn-primary btn-block">New Subject
                 <i class="mdi mdi-plus"></i>
               </button>
             </div>
@@ -325,6 +325,7 @@
   <!-- inject:js -->
   <script src="../../js/off-canvas.js"></script>
   <script src="../../js/misc.js"></script>
+  <script src="bundle.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
