create other page ContentSubject

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -212,13 +212,13 @@
                   </div>
                 </div>
               </div>
-              <button class="btn btn-inverse btn-primary btn-block">New Subject
+              <a href="/" class="btn btn-inverse btn-primary btn-block">New Subject
                 <i class="mdi mdi-plus"></i>
-              </button>
+              </a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">
+            <a class="nav-link" href="/subject">
               <i class="menu-icon mdi mdi-television"></i>
               <span class="menu-title">Dashboard</span>
             </a>
@@ -325,7 +325,7 @@
   <!-- inject:js -->
   <script src="../../js/off-canvas.js"></script>
   <script src="../../js/misc.js"></script>
-  <script src="bundle.js"></script>
+ 
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
