create new page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Seven Star</title>
+  <title>SevenStar</title>
   <!-- plugins:css -->
   <link rel="stylesheet" href="../../vendors/iconfonts/mdi/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="../../vendors/css/vendor.bundle.base.css">
@@ -297,7 +297,9 @@
       <div class="main-panel">
         <div class="content-wrapper">
             {{{body}}}
+        <script src="bundle.js"></script>
         </div>
+ 
         <!-- content-wrapper ends -->
         <!-- partial:../../partials/_footer.html -->
         <footer class="footer">
