--- a/views/subject.hbs
+++ b/views/subject.hbs
@@ -1,4 +1,13 @@
-<div id="content">
-    
+<div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                    <img src="" alt="..."/>
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+                            <p>...</p>
+                            <p><a  class="btn btn-primary" role="button">Button</a>
+                            <a class="btn btn-default" role="button">Button</a></p>
+                        </div>
+                 </div>
+                </div>
 </div>
- <script src="bundle.js"></script>
