creat subject form

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,6 +17,9 @@
   <link rel="stylesheet" href="../../css/style.css">
   <!-- endinject -->
   <link rel="shortcut icon" href="../../images/favicon.png" />
+
+<!-- Latest compiled and minified JavaScript -->
+   <script  src="../../js/jquery.js"></script>
 </head>
 
 <body>
@@ -321,6 +324,7 @@
   <!-- plugins:js -->
   <script src="../../vendors/js/vendor.bundle.base.js"></script>
   <script src="../../vendors/js/vendor.bundle.addons.js"></script>
+  
   <!-- endinject -->
   <!-- Plugin js for this page-->
   <!-- End plugin js for this page-->
