--- a/views/subject.hbs
+++ b/views/subject.hbs
@@ -1,13 +1,37 @@
-<div class="row">
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                    <img src="" alt="..."/>
-                        <div class="caption">
-                            <h3>Thumbnail label</h3>
-                            <p>...</p>
-                            <p><a  class="btn btn-primary" role="button">Button</a>
-                            <a class="btn btn-default" role="button">Button</a></p>
-                        </div>
-                 </div>
-                </div>
+
+<script  type="text/javascript">
+    function getdata()
+    {
+        $.ajax({
+
+                    type: "GET",
+                    contentType: "application/json; charset=utf-8",
+                    url: "/api/getsubject",
+                    data: "{}",
+                    dataType: "json",
+                    success: function (data) {
+                        $.each( data, function( key, value ) {
+                        $("#subcon").append("<div class='col-sm-6 col-md-4'>"+" <div class='thumbnail'>"+
+                        " <img src="+value.pic+" style='height:200px' />"+
+                        "<div class='caption'>"+" <h3>"+value.title+"</h3>"+
+                        "<p>"+value.description+"</p>");
+                        });
+                    },
+                    error: function (result) {
+                        alert("Error");
+                    }
+                });
+    }
+    $( document ).ready(function() {
+    getdata();
+    });
+   
+</script>
+<div class="row" id="subcon">
+              
+                   
+                   
+                        
+                           
+
 </div>
