--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,10 +16,15 @@
   <!-- inject:css -->
   <link rel="stylesheet" href="../../css/style.css">
   <!-- endinject -->
-  <link rel="shortcut icon" href="../../images/favicon.png" />
+  
 
+  
+  <link rel="shortcut icon" href="../../images/favicon.png" />
+  
 <!-- Latest compiled and minified JavaScript -->
-   <script  src="../../js/jquery.js"></script>
+
+ <script  src="../../js/jquery.js"></script>
+ 
 </head>
 
 <body>
@@ -331,7 +336,7 @@
   <!-- inject:js -->
   <script src="../../js/off-canvas.js"></script>
   <script src="../../js/misc.js"></script>
- 
+  <script src="rater.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
