--- a/views/subject.hbs
+++ b/views/subject.hbs
@@ -1,9 +1,20 @@
 
 <script  type="text/javascript">
+  $( document ).ready(function() {
+         
+         getdata();
+        
+   });
+ 
     function getdata()
     {
+        var options = {
+                max_value: 7,
+                step_size: 1,
+                update_input_field_name: $("#asd"),
+              
+            }
         $.ajax({
-
                     type: "GET",
                     contentType: "application/json; charset=utf-8",
                     url: "/api/getsubject",
@@ -11,27 +22,37 @@
                     dataType: "json",
                     success: function (data) {
                         $.each( data, function( key, value ) {
-                        $("#subcon").append("<div class='col-sm-6 col-md-4'>"+" <div class='thumbnail'>"+
-                        " <img src="+value.pic+" style='height:200px' />"+
+                       
+                        $("#subcon").append("<div class='col-sm-6 col-md-4'>"+"<div class='box'> <div class='thumbnail'>"+
+                        " <img src="+value.pic+" style='height:230px; width:99%;' />"+
                         "<div class='caption'>"+" <h3>"+value.title+"</h3>"+
-                        "<p>"+value.description+"</p>");
+                        "<p>"+value.description+"</p> "+
+                        "<div class='rate'  data-rate-value="+value.rate+" onclick='SendRate(\""+value._id+"\","+value.rate+")' ></div>");
                         });
+                         $(".rate").rate(options);
                     },
                     error: function (result) {
                         alert("Error");
                     }
                 });
+             
     }
-    $( document ).ready(function() {
-    getdata();
-    });
+    function SendRate(id,rate)
+    {
+        var userId=1;
+        $.ajax({
+                    type: "POST",
+                    contentType: "application/json; charset=utf-8",
+                    url: "/api/AddRate",
+                    data: {Id:id,userId:userId,rate:rate},
+                    dataType: "json",
+                    success: function (data) {
+                        alert('Save Rating');
+                    }
+        })
+    } 
    
 </script>
 <div class="row" id="subcon">
-              
-                   
-                   
-                        
-                           
-
+ <input type="hidden" id="asd">
 </div>
