--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16337,7 +16337,7 @@ input#file {
   margin-top: 5%;
   margin-left:auto !important;
   margin-right: auto !important;
-  border-radius: 20px 20px 20px 20px;
+  border-radius: 10px ;
   margin-bottom: 1%;
 }
 .rate {
