--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,6 +15,8 @@
   <!-- End plugin css for this page -->
   <!-- inject:css -->
   <link rel="stylesheet" href="../../css/style.css">
+  
+   <link href="../../css/toastr.min.css" rel="stylesheet" type="text/css" />
   <!-- endinject -->
   
 
@@ -337,6 +339,7 @@
   <script src="../../js/off-canvas.js"></script>
   <script src="../../js/misc.js"></script>
   <script src="rater.js"></script>
+   <script src="toastr.js"></script>
   <!-- endinject -->
   <!-- Custom js for this page-->
   <!-- End custom js for this page-->
